samples/_failures_safe/1761394050_821332_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9663d51b.c: In function ‘get_token’:
./samples/SAFE/__tmp_9663d51b.c:149:14: error: expected ‘;’ at end of input
  149 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_9663d51b.c:149:9: error: expected declaration or statement at end of input
  149 |         token
      |         ^~~~~
./samples/SAFE/__tmp_9663d51b.c:149:9: error: expected declaration or statement at end of input
